# vs-code-demo

./: File Agnostic.md  Python Projects.md  R projects.md  README.md  Snowflake.md  csv Files.md  md Files.md  pyproject.toml  sh Files.md
demo-snowflake-outputs/: 1c1c83193137.csv
demo-sql-queries/: get-10-lots.sql  uvwEvent-definition.sql  uvwInterval-definition.sql
docs/: Dataiku.md  File Agnostic.md  Python Projects.md  Snowflake.md  drawio Files.md  json Files.md  md Files.md
