[tool.poetry]
name = "dataiku"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
sqlfluff = "^2.3.5"
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
pylint = "^3.0.3"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
